--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,17 +1,11 @@
-<html>
-    <head>
-        <title>My blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">Home page MadMax</a></h1>
-        </div>
-        {% for post in posts %}
-        <div>
-            <p>published: {{ post.published_date }}</p>
-            <h2><a href="">{{ post.title }}</a></h2>
-            <p>{{ post.text|linebreaksbr }}<p/>
-        </div>
-    {% endfor %}
-    </body>
-</html>
+{% extends 'blog/base.html' %}
+{% block content%}
+                    {% for post in posts %}
+                    <div class="post">
+                    <h1><a href="">{{ post.title }}</a></h1>
+                    <p>{{ post.text|linebreaksbr }}</p>
+                        <div class="date"><p>Опубликовано: {{ post.published_date }}</p>
+                        </div>
+                    </div>
+                    {% endfor %}
+{% endblock %}
